--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 div.caja1{
     background-color: aqua;
     border: 1px solid blue;
-    width: 250px;
+    width: 33%;
     height: 100px;
     display: inline-block;
 }
@@ -9,7 +9,7 @@ div.caja1{
 div.caja2{
     background-color: orangered;
     border: 1px solid red;
-    width: 250px;
+    width: 33%;
     height: 100px;
     display: inline-block;
 }
@@ -17,7 +17,7 @@ div.caja2{
 div.caja3{
     background-color: burlywood;
     border: 1px solid yellow;
-    width: 250px;
+    width: 33%;
     height: 100px;
     display: inline-block;
 }
