--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 div.caja1{
-    background-color: aqua;
+    background-color: blue;
     border: 1px solid blue;
     width: 33%;
-    height: 100px;
+    height: 200px;
     display: inline-block;
 }
 
 div.caja2{
-    background-color: orangered;
+    background-color: red;
     border: 1px solid red;
     width: 33%;
-    height: 100px;
+    height: 200px;
     display: inline-block;
 }
 
 div.caja3{
-    background-color: burlywood;
+    background-color: yellow;
     border: 1px solid yellow;
     width: 33%;
-    height: 100px;
+    height: 200px;
     display: inline-block;
 }
 
